auth-service/manifest/1_pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: aws-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: 286387522454.dkr.ecr.ap-northeast-2.amazonaws.com/demoproject/auth-service:16d60d0d8b8c464eb7742abbfe7e917cd4a9def0
        ports:
        - containerPort: 8000
