auth-service/manifest/2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: aws-test
spec:
  selector:
    app: auth
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
